<resources>
    <string name="app_name">S F A</string>
    <string name="company">PMA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_information">information</string>
    <string name="title_activity_call_plan">CallPlan</string>
    <string name="title_activity_order">Order</string>
    <string name="action_menu_edit">Edit</string>
    <string name="action_menu_delete">Delete</string>
    <string-array name="menu">
        
        <item>Delete</item>
    </string-array>
    <string-array name="menu_call_plan">
        <item>Alasan tidak scan barcode</item>
        <item>Alasan tidak dikunjungi</item>
    </string-array>
    <string name="title_activity_add_order">add_order</string>
    <string-array name="arr_uom">
        <item>CRT</item>
        <item>PAC</item>
        <item>PC</item>
    </string-array>
    <string name="your_string">Promo Barang.</string>
    <string-array name="type_of_building">
        <item>Contract</item>
        <item>Own</item>
        <item>Rent</item>
    </string-array>
    <string-array name="company_type">
        <item>Corp</item>
        <item>LTD</item>
    </string-array>
    <string-array name="nav_drawer_items">
        <item>Attandance</item>
        <item>Call Plan</item>
        <item>Product</item>
        <item>Customer</item>
        <item>Target</item>
        <item>Competitor</item>
        <item>View Order</item>
        <item>Synchronous</item>
    </string-array>
    <string name="sample_activity_form_is_valid">Form is valid</string>
    <string name="lib_name">Z-Validations</string>
    <string name="zvalidations_not_positive_integer">Field should be positive integer</string>
    <string name="zvalidations_empty">Field could not be empty</string>
    <string name="zvalidations_not_in_range">Field should be between %1$d and %2$d</string>
    <string name="zvalidations_not_email">Value is not valid email address</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="drawer_menu_start">S T A R T</string>
    <string name="drawer_menu_call_plan">CALL PLAN</string>
    <string name="drawer_menu_brand">BRAND</string>
    <string name="drawer_menu_customer">CUSTOMER</string>
    <string name="drawer_menu_inventory">INVENTORY</string>
    <string name="drawer_menu_target">TARGET</string>
    <string name="drawer_menu_competitor">COMPETITOR</string>
    <string name="drawer_menu_view_order">VIEW ORDER</string>
    <string name="drawer_menu_summary">SUMMARY</string>
    <string name="drawer_menu_synchronous">SYNCHRONOUS</string>
    <string name="drawer_menu_settings">SETTINGS</string>
    <string name="drawer_menu_logout">LOGOUT</string>
    <string name="login_hint_user_name">User Name</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_invalid">Invalid user name or password</string>
    <string name="login_blank">Please fill user name and password</string>
    <string name="login_multiple">Multiple login not allowed</string>
    <string name="login_switch_restrict">Switch user not allowed</string>
    <string name="login_device_not_register">Device not register</string>
    <string name="logout_msg_confirm">Are you sure to logout?</string>
    <string name="connection_error">Unable connect to server</string>
    <string name="start_label_work_start">Work Start :</string>
    <string name="start_label_work_end">Work End :</string>
    <string name="start_button_work_start">Start Work</string>
    <string name="start_button_work_end">End Work</string>
    <string name="start_input_box_title_odometer">Input Odometer</string>
    <string name="start_input_box_text_start_odometer">Please input start of value odometer</string>
    <string name="start_input_box_text_end_odometer">Please input end of value odometer</string>
    <string name="start_prompt_button_odometer_save">save</string>
    <string name="start_prompt_button_odometer_cancel">Cancel</string>
    <string name="start_prompt_title_work_end_confirm">Confirm</string>
    <string name="start_prompt_text_work_end_confirm">Work End now?</string>
    <string name="start_prompt_button_work_end_yes">YES</string>
    <string name="start_prompt_button_work_end_cancel">NO</string>
    <string name="start_work_end_error_customer_finish_visit">You have finished all visited. Can\'t visit more</string>
    <string name="start_work_end_error_customer_novisit_nocall">No visited customer. Please complete</string>
    <string name="start_work_end_error_customer_still_visit">There is customer with visited status. Please complete</string>
    <string name="start_work_end_error_customer_still_pause">There is customer with paused status. Please complete</string>
    <string name="logout_prompt_title">Enerlifr Confirm</string>
    <string name="logout_prompt_text">Are you sure to logout?</string>
    <string name="logout_prompt_button_yes">YES</string>
    <string name="logout_prompt_button_cancel">NO</string>
    <string name="app_update_prompt_text">There is newer version of this application available. Upgrade now?</string>
    <string name="app_update_prompt_button_remind_later">NO</string>
    <string name="app_update_prompt_button_ok">OK</string>
    <string name="extract_docking_prompt_title">Enerlifr Confirm</string>
    <string name="extract_docking_prompt_text">Extract data will be cancel all pending data. Continue ?</string>
    <string name="extract_docking_prompt_button_yes">YES</string>
    <string name="extract_docking_prompt_button_cancel">NO</string>
    <string name="sync_master_docking_prompt_title">WARNING</string>
    <string name="sync_master_prompt_text">This operation required strength of connection. Continue ?</string>
    <string name="sync_master_prompt_button_yes">YES</string>
    <string name="sync_master_prompt_button_cancel">NO</string>
    <string name="sync_master_release">RELEASE</string>
    <string name="sync_master_active">ACTIVE</string>
    <string name="sync_master_retry">RETRY</string>
    <string name="sync_master_done">DONE</string>
    <string name="sync_master_cancel">CANCEL</string>
    <string name="sync_master_extract_data">Extract Data now?</string>
    <string name="sync_master_extract_data_restrict">Extract not allowed</string>
    <string name="version_docking_prompt_title">VERSION</string>
    <string name="version_prompt_text">Version %version</string>
    <string name="version_prompt_button_ok">OK</string>
    <string name="call_plan_pre_call_btn_text_taking_order">Taking Order</string>
    <string name="call_plan_pre_call_btn_text_return_order">Return Order</string>
    <string name="call_plan_pre_call_btn_text_skip_call">Skip Call</string>
    <string name="call_plan_pre_call_btn_text_competitor">Competitor</string>
    <string name="call_plan_pre_call_btn_text_end_call">End Call</string>
    <string name="call_plan_pre_call_text_view_sales_notes">*Sales cannot Skip Call</string>
    <string name="call_plan_pre_call_text_view_customer_notes">Customer Notes</string>
    <string name="call_plan_pre_call_msg_restrict_return">Return Order not allowed</string>
    <string name="call_plan_pre_call_msg_restrict_skip">Skip call not allowed</string>
    <string name="call_plan_pre_call_msg_confirm_skip">Are you sure to skip call ?</string>
    <string name="call_plan_pre_call_msg_restrict_blank_reason">Blank transaction is required a reason.</string>
    <string name="call_plan_pre_call_msg_restrict_no_picture">Picture of outlet is required.</string>
    <string name="call_plan_pre_title_signature">Signature</string>
    <string name="checkbox_suggestion_route">Suggestion Route</string>
    <string name="textview_call_visited_status_list_view">Visited</string>
    <string name="textview_call_no_call_status_list_view">No Call</string>
    <string name="product_label_product_number">Product Number</string>
    <string name="product_label_product_name">Product Name</string>
    <string name="product_label_product_alias">Product Name Alias</string>
    <string name="product_label_product_status">Status</string>
    <string name="product_label_base_uom">Base UoM</string>
    <string name="product_label_small_uom">Small UoM</string>
    <string name="product_label_medium_uom">Medium UoM</string>
    <string name="product_label_large_uom">Large UoM</string>
    <string name="product_label_conversion_large_to_small">Conversion large to small</string>
    <string name="product_label_conversion_medium_to_small">Conversion Medium to small</string>
    <string name="customer_label_customer_number">Customer Number</string>
    <string name="customer_label_customer_name">Customer Name</string>
    <string name="customer_label_customer_alias">Customer Name Alias</string>
    <string name="customer_label_top">Terms of Payment</string>
    <string name="customer_label_delivery_day">Call Day</string>
    <string name="customer_label_phone_number">Phone Number</string>
    <string name="customer_label_contact_person">Contact Person</string>
    <string name="customer_label_notes">Notes</string>
    <string name="customer_label_status">Status</string>
    <string name="customer_label_address">Address</string>
    <string name="customer_label_city">City</string>
    <string name="customer_label_latitude">Latitude</string>
    <string name="customer_label_longitude">Longitude</string>
    <string name="common_msg_no_data_found">No Data Found</string>
    <string name="common_msg_search_hint">Search...</string>
    <string name="inventory_sort_by_name">Sort by name</string>
    <string name="inventory_sort_by_alias">Sort by alias</string>
    <string name="inventory_sort_by_code">Sort by code</string>
    <string name="inventory_sort_by_smallest">sort by smallest quantity</string>
    <string name="inventory_sort_by_largest">sort by largest quantity</string>
</resources>