<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText android:id="@+id/tSearchPlan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:background="@drawable/list_bg2"
        android:drawableLeft="@drawable/abc_ic_search_api_mtrl_alpha"
        android:hint="@string/common_msg_search_hint">
    </EditText>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_suggestion_route"
        android:paddingRight="15dp"
        android:id="@+id/chkSuggestRoute"
        android:layout_gravity="right" />

        <ListView
            android:id="@+id/lstCallPlan"
            android:background="@drawable/list_bg"
            android:layout_width="fill_parent"
            android:splitMotionEvents="false"
            android:listSelector="#dddddd"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/list_empty"
                android:text="@string/common_msg_no_data_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#666"
                android:gravity="center" />
        </LinearLayout>


</LinearLayout>